[project]
name = "datapusher-plus"
version = "3.0.0a0"
description = "Next-generation, extensible Data Ingestion framework for CKAN. Accelerated by qsv and orchestrated by Prefect."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "datHere" }]
maintainers = [{ name = "datHere Engineering", email = "info@dathere.com" }]
keywords = [
	"ckan",
	"ckanext",
	"datapusher",
	"datastore",
	"csv",
	"qsv",
	"data-ingestion",
	"metadata",
	"schema",
]
classifiers = [
	"Intended Audience :: Developers",
	"Development Status :: 5 - Production/Stable",
	"License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries",
	"Topic :: Software Development :: Libraries :: Application Frameworks",
	"Topic :: Database",
]

[project.urls]
Homepage = "https://github.com/dathere/datapusher-plus"
Repository = "https://github.com/dathere/datapusher-plus"
Issues = "https://github.com/dathere/datapusher-plus/issues"
Changelog = "https://github.com/dathere/datapusher-plus/blob/main/CHANGELOG.md"
Documentation = "https://github.com/dathere/datapusher-plus#readme"

[project.entry-points."ckan.plugins"]
datapusher_plus = "ckanext.datapusher_plus.plugin:DatapusherPlusPlugin"

[project.entry-points."babel.extractors"]
ckan = "ckan.lib.extract:extract_ckan"

[build-system]
requires = ["setuptools>=62.6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["."], exclude = ["tests*"] } }
# Tell setuptools to include MANIFEST.in-listed data files (yaml, json, html,
# js, mo, etc.) inside the *wheel* as well, not just the sdist. Without this,
# `pip install datapusher-plus` from PyPI builds a wheel that omits
# `config_declaration.yaml` and the bundled templates/JS — surfaces as
# "config_declaration.yaml file is missing" at plugin load time (see #251).
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { dev = { file = ["requirements-dev.txt"] } }

# pytest config lives here (moved from setup.cfg) so build metadata has a
# single source of truth in pyproject.toml. setup.cfg now only holds babel
# i18n command config, and setup.py only holds the babel message_extractors
# block (which has no pyproject-native equivalent).
[tool.pytest.ini_options]
filterwarnings = [
    "ignore::sqlalchemy.exc.SADeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore::DeprecationWarning",
]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"
