[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = true

[options.entry_points]
babel.extractors =
    ckan = ckan.lib.extract:extract_ckan

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/datapusher-plus/i18n/datapusher-plus.pot
width = 80

[init_catalog]
domain = datapusher-plus
input_file = ckanext/datapusher-plus/i18n/datapusher-plus.pot
output_dir = ckanext/datapusher-plus/i18n

[update_catalog]
domain = datapusher-plus
input_file = ckanext/datapusher-plus/i18n/datapusher-plus.pot
output_dir = ckanext/datapusher-plus/i18n
previous = true

[compile_catalog]
domain = datapusher-plus
directory = ckanext/datapusher-plus/i18n
statistics = true

[tool:pytest]

filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --pdbcls=IPython.terminal.debugger:TerminalPdb